2005-03-24  Alexander V. Lukyanov <lav@yars.free.net>

	* HttpDirXML.cc: fixed coredump when there is no files; added
	  handler for creator-displayname; check parent node for href.

2005-03-13  Alexander V. Lukyanov <lav@yars.free.net>

	* buffer.cc: prevent spinning when disk is full in IOBufferFDStream;
	  better saving of errno.
	* Filter.cc, Filter.h: allow passing errno value to MakeErrorText.

2005-03-11  Alexander V. Lukyanov <lav@yars.free.net>

	* HttpDir.cc: extract listing info for HttpListInfo.

2005-03-09  Alexander V. Lukyanov <lav@yars.free.net>

	* FileCopyFtp.cc, ftpclass.h: handle timeout when waiting for ack.
	* misc.cc: (strip_trailing_slashes) don't strip last slash in root directory.

2005-03-05  Alexander V. Lukyanov <lav@yars.free.net>

	* FileAccess.cc: don't strip trailing slash in OptimizePath.
	* Http.cc: send full URL in Destination header; fix Done for a number
	  of methods.
	* misc.cc, misc.h: (strip_trailing_slashes) new function.
	* mvJob.cc: append basename of target ends with a slash.
	* ftpclass.cc, resource.cc: (ftp:ignore-pasv-address) new setting.
	* Http.cc, Http.h: add support for `quote MOVE/COPY'.
	* FileAccess.cc: set event_time in Open to prevent false timeout.

2005-03-01  Alexander V. Lukyanov <lav@yars.free.net>

	* NetAccess.cc: make TOS changes compile on solaris.

2005-03-01  Mark Schreiber <mark7@alumni.cmu.edu>

	* ftpclass.cc, NetAccess.cc, NetAccess.h: use TOS on ftp connections.

2005-02-25  Alexander V. Lukyanov <lav@yars.free.net>

	* Http.cc: set C locale before time conversion (fixes Last-Modified
	  parsing).
	* FileSetOutput.cc: get time format at run time, not statically.
	* Http.cc, resource.cc: add use-propfind and use-mkcol settings, turn
	  them off by default for hftp.

2005-02-23  Alexander V. Lukyanov <lav@yars.free.net>

	* Http.cc, HttpDir.cc, HttpDir.h, HttpDirXML.cc: compile without
	  expat.
	* SFtp.cc: fix Buffered so that it does not return more than possible.