@@ -26,7 +26,7 @@
 #include "url.h"
 #include "misc.h"
 
-#ifdef HAVE_EXPAT_H
+#if USE_EXPAT
 #include <expat.h>
 
 struct xml_context
@@ -228,7 +228,7 @@ end:
       xml_ctx=0;
    }
 }
-#else // !HAVE_EXPAT_H
+#else // !USE_EXPAT
 FileSet *HttpListInfo::ParseProps(const char *b,int len,const char *base_dir) { return 0; }
 void HttpDirList::ParsePropsFormat(const char *b,int len,bool eof) {}
-#endif // !HAVE_EXPAT_H
+#endif // !USE_EXPAT
