@@ -1,3 +1,8 @@
+2005-03-28  Alexander V. Lukyanov <lav@yars.free.net>
+
+	* commands.cc: interpret the rest of line after lftp -c as command.
+	* Http.cc, HttpDir.cc, HttpDir.h, HttpDirXML.cc: use USE_EXPAT define.
+
 2005-03-24  Alexander V. Lukyanov <lav@yars.free.net>
 
 	* HttpDirXML.cc: fixed coredump when there is no files; added
